New images in layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<div class="header-wrap ">
 		<header class="wrapper">
-			<div id="logo"><a href="index.html"><img src="assets/css/img/pauvi-logo.svg" alt="Pau Vila"></a></div>
+			<div id="logo"><a href="index.html"><img src="assets/css/img/pauvi-logo.png" alt="Pau Vila"></a></div>
 			<nav>
 				<ul>
 					<li><a href="index.html#work">Work</a></li>
@@ -61,7 +61,7 @@
 	<div class="main clearfix">
 		<!-- BEGIN SPOT TITLE:INTRO -->  
 		<div class="title intro clearfix">
-			<img src="assets/css/img/pauvi-intro.svg" alt="Pau Vila" class="wrapper">
+			<img src="assets/css/img/pauvi-intro.png" alt="Pau Vila" class="wrapper">
 			<span>...</span>
 			<h2>UX Designer - Frontend Developer</h2>
 		</div>
