Delete more about me (temporally)

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						<p>My coding skills let me design even complex ideas.</p>
 						<p>I've been curious since I was a child and this made me open and flexible, essential skills for concepting.</p>
 						<p>Please, feel free to send me some words so we could speak and know each other.</p>
-						<a id="demo01" class="button" href="#animatedModal">MORE ABOUT ME</a>
+						<!-- <a id="demo01" class="button" href="#animatedModal">MORE ABOUT ME</a> -->
 						<a class="button" href="#contact">Contact me</a>
 					</div>
 
